# Market-Shield-App

./: README.md  app.py  pyproject.toml
.cache/: risk_analysis_52577ddfb4186579.pkl  risk_analysis_e63298db6e61ef10.pkl  url_content_3b0b3bd6767e393b.pkl  url_content_ccde6d404ab9bbdc.pkl  youtube_transcript_25c042ea3c7f2234.pkl  youtube_transcript_4016e9753a162b06.pkl
data/: documents.pkl
marketshield/: __init__.py  cache.py  deepfake.py  ingest.py  rag.py  risk.py  security.py  utils.py  verify.py
scripts/: build_index.py
