[project]
name = "marketshield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "audioread>=3.0.1",
    "chardet>=5.2.0",
    "cryptography>=45.0.7",
    "easyocr>=1.7.2",
    "faiss-cpu>=1.12.0",
    "google-genai>=1.32.0",
    "google-generativeai>=0.8.5",
    "imbalanced-learn>=0.11.0",
    "librosa>=0.11.0",
    "llvmlite>=0.42",
    "numba>=0.59",
    "numpy>=2.2,<2.3",
    "opencv-python>=4.8.0",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly>=5.17.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pypdf>=6.0.0",
    "pytesseract>=0.3.13",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.1",
    "streamlit>=1.49.1",
    "streamlit-option-menu>=0.3.6",
    "structlog>=23.0.0",
    "tenacity>=8.0.0",
    "validators>=0.20.0",
    "xgboost>=1.7.0",
    "youtube-transcript-api>=1.2.2",
    "yt-dlp>=2024.8.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.11",
]
